2010-05-01  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix comment handling.

	* tests/grub_script_comments.in: New testcase.
	* conf/tests.rmk: Rules for new testcase.
	* script/yylex.l: Updated flex rules.

2010-04-28  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* docs/grub.texi (play): Document that zero pitches produce rests.
	* commands/i386/pc/play.c (grub_cmd_play): Call 'grub_file_open' only
	if argc is 1.

2010-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/x86-efi.rmk (linux_mod_SOURCES): Write explicitly to avoid
	autogen issues.

2010-04-26  Christian Franke  <franke@computer.org>

	* include/grub/util/getroot.h (grub_get_prefix): Remove prototype.
	* util/getroot.c [__CYGWIN__] (get_win32_path): Remove function.
	(grub_get_prefix): Remove function.
	* util/grub-emu.c (main): Replace grub_get_prefix () call by
	make_system_path_relative_to_its_root ().
	* util/sparc64/ieee1275/grub-setup.c (main): Likewise.

2010-04-24  Christian Franke  <franke@computer.org>

	* Makefile.in (TARGET_LDFLAGS): Add -static-libgcc.
	(kernel_img_LDFLAGS): Remove -static-libgcc.

2010-04-24  Christian Franke  <franke@computer.org>

	* configure.ac: Do not CHECK_BSS_START_SYMBOL
	and CHECK_END_SYMBOL if grub-emu is built.
	Unset TARGET_OBJ2ELF if grub-emu is built
	without module support.

2010-04-24  Jiro SEKIBA <jir@unicus.jp>

	Nilfs2 support.

	* conf/common.rmk (grub_probe_SOURCES): Add fs/nilfs2.c.
	(grub_fstest_SOURCES): Likewise.
	(pkglib_MODULES): Add nilfs2.mod.
	(nilfs2_mod_SOURCES): New variable.
	(nilfs2_mod_CFLAGS): Likewise.
	(nilfs2_mod_LDFLAGS): Likewise.
	* conf/i386-pc.rmk (grub_setup_SOURCES): Add fs/nilfs2.c.
	* conf/sparc64-ieee1275.rmk (grub_setup_SOURCES): Add fs/nilfs2.c.
	* fs/nilfs2.c: New file.

2010-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Refuse to compile for x86_64-efi is mcmodel=large
	is not supported.

2010-04-19  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Add grub-mkconfig support for NetBSD.
